--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,11 +6,11 @@
 </head>
 <body>
     <h1>Login</h1> <hr>
-<!--    <img src="/img/cat.jpg" />-->
+    <img src="/static/img/cat.jpg" />
 
     <form action="/login" method="POST">
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-        email : <input type="text" name="username"> <br>
+        email : <input type="text" name="username"> <br>  <!-- username or email  -->
         password : <input type="password" name="password"> <br>
         <button type="submit">Login</button>
     </form> <br>
